@@ -211,30 +211,33 @@ class PendingStore(gtk.ListStore, TransactionsWatcher):
         return "%s\n<small>%s</small>" % (name, status)
 
 
-class PendingView(gtk.TreeView, BasePane):
+class PendingView(gtk.ScrolledWindow, BasePane):
     
     CANCEL_XPAD = 6
     CANCEL_YPAD = 6
 
     def __init__(self, icons):
-        gtk.TreeView.__init__(self)
+        gtk.ScrolledWindow.__init__(self)
         BasePane.__init__(self)
+        self.tv = gtk.TreeView()
         # customization
-        self.set_headers_visible(False)
-        self.connect("button-press-event", self._on_button_pressed)
+        self.set_policy(gtk.POLICY_AUTOMATIC, gtk.POLICY_AUTOMATIC)
+        self.add(self.tv)
+        self.tv.set_headers_visible(False)
+        self.tv.connect("button-press-event", self._on_button_pressed)
         # icon
         self.icons = icons
         tp = gtk.CellRendererPixbuf()
         tp.set_property("xpad", self.CANCEL_XPAD)
         tp.set_property("ypad", self.CANCEL_YPAD)
         column = gtk.TreeViewColumn("Icon", tp, pixbuf=PendingStore.COL_ICON)
-        self.append_column(column)
+        self.tv.append_column(column)
         # name
         tr = gtk.CellRendererText()
         column = gtk.TreeViewColumn("Name", tr, markup=PendingStore.COL_STATUS)
         column.set_min_width(200)
         column.set_expand(True)
-        self.append_column(column)
+        self.tv.append_column(column)
         # progress
         tp = gtk.CellRendererProgress()
         tp.set_property("xpad", self.CANCEL_XPAD)
@@ -244,25 +247,25 @@ class PendingView(gtk.TreeView, BasePane):
                                     value=PendingStore.COL_PROGRESS,
                                     pulse=PendingStore.COL_PULSE)
         column.set_min_width(200)
-        self.append_column(column)
+        self.tv.append_column(column)
         # cancel icon
         tpix = gtk.CellRendererPixbuf()
         column = gtk.TreeViewColumn("Cancel", tpix, 
                                     stock_id=PendingStore.COL_CANCEL)
-        self.append_column(column)
+        self.tv.append_column(column)
         # fake columns that eats the extra space at the end
         tt = gtk.CellRendererText()
         column = gtk.TreeViewColumn("Cancel", tt)
-        self.append_column(column)
+        self.tv.append_column(column)
         # add it
         store = PendingStore(icons)
-        self.set_model(store)
+        self.tv.set_model(store)
     def _on_button_pressed(self, widget, event):
         """button press handler to capture clicks on the cancel button"""
         #print "_on_clicked: ", event
         if event == None or event.button != 1:
             return
-        res = self.get_path_at_pos(int(event.x), int(event.y))
+        res = self.tv.get_path_at_pos(int(event.x), int(event.y))
         if not res:
             return
         (path, column, wx, wy) = res
@@ -273,7 +276,7 @@ class PendingView(gtk.TreeView, BasePane):
         if column.get_title() != "Cancel":
             return
         # not cancelable (no icon)
-        model = self.get_model()
+        model = self.tv.get_model()
         if model[path][PendingStore.COL_CANCEL] == "":
             return 
         # get tid
